Fix: Menu icon for list controls on mobile

--- a/modules/core/site.css
+++ b/modules/core/site.css
@@ -309,12 +309,14 @@ div.unseen, .unseen .subject { font-weight: 700; }
 }
 
 #list_controls_menu {
+    flex-direction: column;
+    align-items: flex-end;
     position: absolute;
-    width: 50px; 
     right: 0px;
     display: none;
-    padding-left: 14px;
-    padding-bottom: 5px;
+    padding: 0px 5px 5px 10px;
     background-color: #fff;
 }
+#list_controls_menu.show{display: flex;}
+.imap_keyword, .imap_sort, .imap_filter {width: 100%;}
 .snoozed_date { color: teal !important; }
